<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:hint="@string/medicine_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"/>

    <EditText
        android:hint="@string/medicine_expiry_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="date"
        android:inputType="date"/>

    <EditText
        android:hint="@string/quantity_hint"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="none"/>
</LinearLayout>